  the parameter, the API will automatically throw an error.
* (bug 24665) When starttimestamp is not specified, fake it by setting it to NOW, not to 
  the timestamp of the last edit
* (bug 24677) axto= parameters added to allcategories, allimages, alllinks, allmessages, 
  allpages, and allusers
* (bug 24236) Add add, remove, add-self, remove-self tags to meta=siteinfo&siprop=usergroups
* (bug 24484) Add prop=pageprops module   

=== Languages updated in 1.17 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of MediaZilla reports.

* Moroccan Spoken Arabic (ary) (new)
* Banjar (bjn) (new)
* Kabardian (kdb) (new, dummy)
* Kabardian (Cyrillic) (kbd-cyrl) (new)
* Latgalian (ltg) (new)
* Dutch (informal) (nl-informal) (new)
* Rusyn (rue) (new)

* (bug 23156) Commafy and search normalization updated for Belarusian
  (Taraškievica)
* (bug 23283) Native name for Old English -> Ænglisc
* (bug 23364) Native name for Azerbaijani -> Azərbaycanca
* (bug 24593) Native name for Sorani now uses only Arabic script
* (bug 24628) Generic translations for NS_USER/NS_USER_TALK for Esperanto

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer
supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database